--- a/page2.html
+++ b/page2.html
@@ -19,7 +19,7 @@
     <body>
 
         <h1> How to Resolve Tree Damage </h1>
-        <p> Learn about the main reasons trees get damaged by nature and what kind of harm they face. </p>
+        <p> Trees can be harmed by many environmental factors like storms, drought, or flooding. This page offers simple steps to help you take care of damaged trees. Whether it’s broken branches, dry leaves, or weak roots, learning how to fix these problems can keep your trees healthy and strong for years to come. </p>
         <ul>
             <h2>Causes</h2>
             <li><strong>Bad Weather</strong><br>Wind, snow, or lightning</li>
