--- a/index.html
+++ b/index.html
@@ -14,18 +14,13 @@
 
     <body>
 
-        <h1> Environmental Causes Of Tree Damage </h1>
-        <p> Learn about the main reasons trees get damaged by nature and what kind of harm they face. </p>
+        <h1> Tree Damage: What You Can Do About It? </h1>
+        <p> Trees can be damaged by weather, water, and other natural causes.  
+            Click below to explore what harms trees and easy ways to help them recover. </p>
         <ul>
-            <h2>Causes</h2>
-            <li><strong>Bad Weather</strong><br>Wind, snow, or lightning</li>
-            <li><strong>Drought</strong><br>Not enough water</li>
-            <li><strong>Flooding</strong><br>Too much water around roots</li>
-
-            <h2>Damage</h2>
-            <li><strong>Fallen Trees</strong><br>From bad weather</li>
-            <li><strong>Rotten Roots</strong><br>From drought</li>
-            <li><strong>Leaves dry out</strong><br>From flooding</li>
+             <a href="page1.html"><button>🌿 See Environmental Causes</button></a>
+            
+             <a href="page1.html"><button>🛠 Learn How to Fix It</button></a>
 
         </ul>
 
