--- a/page2.html
+++ b/page2.html
@@ -19,17 +19,28 @@
     <body>
 
         <h1> How to Resolve Tree Damage </h1>
-        <p> Learn about the main reasons trees get damaged by nature and what kind of harm they face. </p>
+        <p> Trees can be harmed by many environmental factors like storms, drought, or flooding. This page offers simple steps to help you take care of damaged trees. Whether it’s broken branches, dry leaves, or weak roots, learning how to fix these problems can keep your trees healthy and strong for years to come. </p>
         <ul>
-            <h2>Causes</h2>
-            <li><strong>Bad Weather</strong><br>Wind, snow, or lightning</li>
-            <li><strong>Drought</strong><br>Not enough water</li>
-            <li><strong>Flooding</strong><br>Too much water around roots</li>
+            <h2>Fixing Damage from Bad Weather</h2>
+            <p>
+              After a storm, remove any broken or hanging branches to prevent injury or disease.
+              Use clean tools to make smooth cuts. If the tree is leaning, support it with a stake.
+              For long-term care, plant trees that are more resistant to strong wind or snow.
+             </p>
 
-            <h2>Damage</h2>
-            <li><strong>Fallen Trees</strong><br>From bad weather</li>
-            <li><strong>Rotten Roots</strong><br>From drought</li>
-            <li><strong>Leaves dry out</strong><br>From flooding</li>
+             <h2>Fixing Damage from Drought</h2>
+            <p>
+              Water your trees deeply once or twice a week during dry seasons. 
+              Add mulch around the base of the tree (but not touching the trunk) to help keep moisture in the soil.
+              Avoid cutting the tree during a drought to reduce extra stress.
+             </p>
+
+             <h2>Fixing Damage from Flooding</h2>
+            <p>
+              If a tree has been flooded, try to drain the extra water if possible. 
+              Aerate the soil around the tree to help roots breathe and recover. 
+              In the future, plant trees in well-draining soil or raise the planting area to avoid future flooding.
+            </p>
 
         </ul>
 
