--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 <title> Test website </title>
 
 <style>
-    body {background-color: #bef0c0;  }
-    h1 {color: lightcoral; text-align: center}
-    h2 {color: lightsalmon}
+    body {background-color: #eaf4ea; font-family: Arial, sans-serif; padding: 20px; color: #333; }
+
+    h1 {color: #2e7d32;text-align: center;}
+
+    h2 {color: #6d4c41;margin-top: 20px;}
+
+    p {margin: 10px 0 20px 0;}
+
+    button {background-color: #a5d6a7;color: #1b5e20;border: none;padding: 10px 15px;border-radius: 5px;margin: 5px;font-weight: bold; margin: 20px 0;text-align: center;}
 
 </style>
 
