--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
 <style>
     body {background-color: #eaf4ea; font-family: Arial, sans-serif; padding: 20px; color: #333; }
 
-    h1 {color: #2e7d32;text-align: center;}
+    h1 {color: #2e7d32;text-align: center;font-size: 3rem;}
 
-    h2 {color: #6d4c41;margin-top: 20px;}
+    h2 {color: #6d4c41;margin-top: 20px;text-align: center}
 
-    p {margin: 10px 0 20px 0;}
+    p {margin: 10px 0 20px 0;text-align: center}
 
-    button {background-color: #a5d6a7;color: #1b5e20;border: none;padding: 10px 15px;border-radius: 5px;margin: 5px;font-weight: bold; margin: 20px 0;text-align: center;}
+    ul {text-align: center}
+
+    button {background-color: #a5d6a7;color: #1b5e20;border: none;padding: 10px 15px;border-radius: 5px;margin: 5px;font-weight: bold; margin: 20px 0;}
 
 </style>
 
     </head>
 
     <body>
-
+<img src="images/tree.png" alt="Tree Damage" style="max-width: 800px; width: 100%; height: auto; display: block; margin: 20px auto; border-radius: 10px;">
         <h1> Tree Damage: What You Can Do About It? </h1>
         <p> Trees can be damaged by weather, water, and other natural causes.  
             Click below to explore what harms trees and easy ways to help them recover. </p>
