--- a/page1.html
+++ b/page1.html
@@ -6,7 +6,7 @@
 <style>
     body {background-color: #eaf4ea; font-family: Arial, sans-serif; padding: 20px; color: #333; }
 
-    h1 {color: #2e7d32;text-align: center;}
+    h1 {color: #2e7d32;text-align: center;font-size: 3rem;}
 
     h2 {color: #6d4c41;margin-top: 20px;}
 
@@ -49,3 +49,4 @@
   <button>Next Page</button>
 </a>
 
+<img src="images/damage.jpg" alt="Tree Damage" style="max-width: 500px; width: 100%; height: auto; display: block; margin: 20px auto; border-radius: 10px;">
