--- a/page2.html
+++ b/page2.html
@@ -3,16 +3,19 @@
 
 <title> Test website </title>
 
-<style>
+
+    <style>
     body {background-color: #eaf4ea; font-family: Arial, sans-serif; padding: 20px; color: #333; }
 
-    h1 {color: #2e7d32;text-align: center;}
+    h1 {color: #2e7d32;text-align: center;font-size: 3rem;}
 
-    h2 {color: #6d4c41;margin-top: 20px;}
+    h2 {color: #6d4c41;margin-top: 20px;text-align: center}
 
     p {margin: 10px 0 20px 0;}
 
     button {background-color: #a5d6a7;color: #1b5e20;border: none;padding: 10px 15px;border-radius: 5px;margin: 5px;font-weight: bold; margin: 20px 0;text-align: center;}
+
+  </style>
 
 </style>
 
@@ -58,3 +61,5 @@
 <a href="page1.html">
   <button>Previous Page</button>
 </a>
+
+<img src="images/resolve.jpg" alt="Tree Damage" style="max-width: 500px; width: 100%; height: auto; display: block; margin: 20px auto; border-radius: 10px;">
