--- a/page2.html
+++ b/page2.html
@@ -62,4 +62,4 @@
   <button>Previous Page</button>
 </a>
 
-<img src="images/resolve.jpg" alt="Tree Damage" style="max-width: 500px; width: 100%; height: auto; display: block; margin: 20px auto; border-radius: 10px;">
+<img src="images/resolve.jpg" style="max-width: 500px; width: 100%; height: auto; display: block; margin: 20px auto; border-radius: 10px;">
