--- a/page1.html
+++ b/page1.html
@@ -49,4 +49,4 @@
   <button>Next Page</button>
 </a>
 
-<img src="images/damage.jpg" alt="Tree Damage" style="max-width: 500px; width: 100%; height: auto; display: block; margin: 20px auto; border-radius: 10px;">
+<img src="images/damage.jpg" style="max-width: 500px; width: 100%; height: auto; display: block; margin: 20px auto; border-radius: 10px;">
