--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </head>
 
     <body>
-<img src="images/tree.png" style="max-width: 800px; width: 100%; height: auto; display: block; margin: 20px auto; border-radius: 10px;">
+<img src="Images/tree.png" style="max-width: 800px; width: 100%; height: auto; display: block; margin: 20px auto; border-radius: 10px;">
         <h1> Tree Damage: What You Can Do About It? </h1>
         <p> Trees can be damaged by weather, water, and other natural causes.  
             Click below to explore what harms trees and easy ways to help them recover. </p>
