--- a/index.html
+++ b/index.html
@@ -1,42 +1,26 @@
 <html>
-    <head>
-
-<title> Test website </title>
-
+<title> Building Houses </title>
+<header>
+    <a href="index.html">
+        <button><img src="Images/home_icon.jpg" style="width: 35px; height: 35px"></button>
+    </a><br>
+    <a href="Benefits.html">
+      <button>Benefits</button>
+    </a><br>
+    <a href="Work.html">
+      <button>Work</button>
+    </a><br><br><br><br>
+    <h1>Building Houses</h1>
+</header>
 <style>
-    body {background-color: #eaf4ea; font-family: Arial, sans-serif; padding: 20px; color: #333; }
-
-    h1 {color: #2e7d32;text-align: center;font-size: 3rem;}
-
-    h2 {color: #6d4c41;margin-top: 20px;text-align: center}
-
-    p {margin: 10px 0 20px 0;text-align: center}
-
-    ul {text-align: center}
-
-    button {background-color: #a5d6a7;color: #1b5e20;border: none;padding: 10px 15px;border-radius: 5px;margin: 5px;font-weight: bold; margin: 20px 0;}
-
+    body {background-color: #bfc43f; font-family:  Helvetica, sans-serif; padding: 20px;}
+    h1 {color: #000000; text-align: center; font-size: 3.2rem;}
+    p {text-align: center}
+    header {height: 450px; background-image: url("Images/header_house.jpeg"); background-repeat: no-repeat; background-size: cover;}
+    button {background-color: #000000;color: #ffffff; padding: 8px 8px; border-radius: 10px;margin: 5px; font-weight: bold;}
 </style>
-
-    </head>
-
     <body>
-<img src="Images/tree.png" style="max-width: 800px; width: 100%; height: auto; display: block; margin: 20px auto; border-radius: 10px;">
-        <h1> Tree Damage: What You Can Do About It? </h1>
-        <p> Trees can be damaged by weather, water, and other natural causes.  
-            Click below to explore what harms trees and easy ways to help them recover. </p>
-        <ul>
-             <a href="page1.html"><button>🌿 See Environmental Causes</button></a>
-            
-             <a href="page2.html"><button>🛠 Learn How to Fix It</button></a>
-
-        </ul>
-
-
+        <h1> What are the benefits of building houses? </h1>
+        <p> Our main goal is to build houses for people in need, but the benefits don't stop there. </p>
     </body>
-
 </html>
-
-<a href="page1.html">
-  <button>Next Page</button>
-</a>
