--- a/page1.html
+++ b/page1.html
@@ -4,9 +4,15 @@
 <title> Test website </title>
 
 <style>
-    body {background-color: #bef0c0;  }
-    h1 {color: lightcoral; text-align: center}
-    h2 {color: lightsalmon}
+    body {background-color: #eaf4ea; font-family: Arial, sans-serif; padding: 20px; color: #333; }
+
+    h1 {color: #2e7d32;text-align: center;}
+
+    h2 {color: #6d4c41;margin-top: 20px;}
+
+    p {margin: 10px 0 20px 0;}
+
+    button {background-color: #a5d6a7;color: #1b5e20;border: none;padding: 10px 15px;border-radius: 5px;margin: 5px;font-weight: bold; margin: 20px 0;text-align: center;}
 
 </style>
 
@@ -27,7 +33,6 @@
             <li><strong>Flooding</strong><br>Too much water around roots</li>
 
             <h2>Damage</h2>
-            <img src="tree.png" style="width:24px; height:24px; vertical-align:middle; margin-right:8px;">
             <li><strong>Fallen Trees</strong><br>From bad weather</li>
             <li><strong>Rotten Roots</strong><br>From drought</li>
             <li><strong>Leaves dry out</strong><br>From flooding</li>
@@ -44,3 +49,4 @@
   <button>Next Page</button>
 </a>
 
+<img src="images/damage.png" style="width:100%; height:auto; border-radius: 10px; margin-bottom: 20px;">
