--- a/page1.html
+++ b/page1.html
@@ -49,4 +49,4 @@
   <button>Next Page</button>
 </a>
 
-<img src="images/damage.png" style="width:100%; height:auto; border-radius: 10px; margin-bottom: 20px;">
+<img src="Images/damage.png" style="width:100%; height:auto; border-radius: 10px; margin-bottom: 20px;">
