--- a/page1.html
+++ b/page1.html
@@ -49,4 +49,4 @@
   <button>Next Page</button>
 </a>
 
-<img src="Images/damage.jpg" style="width:100%; height:auto; border-radius: 10px; margin-bottom: 20px;">
+<img src="Images/damage.jpg" style="max-width: 600px; width: 100%; height: auto; display: block; margin: 20px auto; border-radius: 10px;">
